syntax = "proto3";

option go_package = "github.com/no-mole/venus/proto/pbaccesskey";

import "google/protobuf/empty.proto";
import "pbnamespace/namespace.proto";

service AccessKeyService {
  rpc AccessKeyLogin(AccessKeyLoginRequest)returns(AccessKeyLoginResponse);

  rpc AccessKeyGen(AccessKeyInfo) returns (AccessKeyInfo);
  rpc AccessKeyDel(AccessKeyDelRequest)returns(google.protobuf.Empty);
  rpc AccessKeyChangeStatus(AccessKeyStatusChangeRequest)returns(google.protobuf.Empty);
  rpc AccessKeyList(google.protobuf.Empty)returns(AccessKeyListResponse);

  rpc AccessKeyNamespaceList(AccessKeyNamespaceListRequest)returns(pbnamespace.NamespaceAccessKeyListResponse);
}

message AccessKeyNamespaceListRequest{
  string ak = 1;//access key
}

enum AccessKeyStatus{
  AccessKeyStatusNil = 0;
  AccessKeyStatusEnable = 1;
  AccessKeyStatusDisable = -1;
}

message AccessKeyStatusChangeRequest{
  // @cTags: binding:"required"
  string ak = 1;//access key id
  // @cTags: binding:"required"
  AccessKeyStatus status = 2;
}

message AccessKeyListResponse{
  repeated AccessKeyInfo items = 1;
}

message AccessKeyLoginRequest{
  // @cTags: binding:"required"
  string ak = 1;//access key
  // @cTags: binding:"required"
  string password = 3;//密码
}

message AccessKeyLoginResponse {
  string ak = 1;//access key
  string alias = 2;//显示名称
  string access_token = 3; // access_token
  string token_type = 4; // token类型
  int64 expired_in = 6;//token 过期时间
  repeated pbnamespace.NamespaceAccessKeyInfo namespace_items = 7;//已授权namespace列表
}

message AccessKeyDelRequest {
  // @cTags: binding:"required"
  string ak = 1;//access key
}

message AccessKeyInfo{
  // @cTags: binding:"required"
  string ak = 1;//access key
  string alias = 2;//显示名称
  string password = 3;//密码
  string update_time = 4;//最近更新时间
  string updater = 5;//最近更新人
  AccessKeyStatus status = 6;//ak状态
}